--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,17 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context=".activities.MainActivity"
     android:orientation="vertical"
+    android:background="@color/colorCustomDark"
     >
-
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="@color/colorCustomBackground"
-        android:padding="20dp">
+        android:background="@drawable/layout_bg2"
+        android:padding="20dp"
+        >
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
@@ -28,13 +29,14 @@
                 android:layout_height="wrap_content"
                 android:inputType="text"
                 android:maxLines="1"
-                android:hint="Username"/>
+                android:hint="@string/username"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp">
+            android:layout_margin="4dp"
+            >
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etPassword"
@@ -42,39 +44,54 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
                 android:maxLines="1"
-                android:hint="Password"/>
+                android:hint="@string/password"
+                />
         </com.google.android.material.textfield.TextInputLayout>
 
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/bDownload"
-            style="@style/Widget.MaterialComponents.Button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Download"
-            android:textAppearance="?android:textAppearanceMedium"
-            app:icon="@android:drawable/stat_sys_download"
-            android:layout_gravity="center_horizontal"
-            android:layout_margin="4dp"
-            android:textColor="@color/colorCustomText"
-            app:iconTint="@color/colorCustomText"
-            />
-
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/bDownload"
+                style="@style/Widget.MaterialComponents.Button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/download"
+                android:textAppearance="?android:textAppearanceMedium"
+                app:icon="@android:drawable/stat_sys_download"
+                android:layout_gravity="right"
+                android:layout_margin="4dp"
+                android:textColor="@color/colorCustomText"
+                app:iconTint="@color/colorCustomText"
+                android:layout_marginBottom="25dp"
+               />
 
     </LinearLayout>
 
-
-
-
-
-
-
-    <ImageView
-        android:id="@+id/ivImage"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_launcher_foreground"
+        android:orientation="vertical"
         android:layout_weight="1"
-        android:layout_margin="20dp"/>
+        android:background="@drawable/layout_bg"
+        android:layout_marginTop="-10dp"
+        >
+
+        <ProgressBar
+            android:visibility="gone"
+            android:id="@+id/horizontal_progress_bar"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:indeterminate="true"
+            />
+        <ImageView
+            android:id="@+id/ivImage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_launcher_foreground"
+            android:layout_weight="1"
+            android:layout_margin="20dp"
+            />
+
+    </LinearLayout>
 
 </LinearLayout>
